# par_tui

./: .gitignore  .gitmessage  Cargo.toml  LICENSE-MIT  PKGBUILD  README.md  STATUS.md  rustfmt.toml
.github/: 4user.md  copilot-instructions.md
.github/instructions/: commit.intsruction.md  directory.instructions.md  packaging.instructions.md  project.instructions.md  rust-library.instructions.md  rust.instructions.md  test.instructions.md  tui.instructions.md
src/: app.rs  lib.rs  main.rs
src/core/: dependency.rs  filter.rs  mod.rs  planner.rs
src/io/: command.rs  file.rs  mod.rs  terminal.rs
src/models/: config.rs  mod.rs  package.rs
src/parser/: mod.rs  pacman.rs  paru.rs  toml.rs
src/ui/: app.rs  controller.rs  mod.rs  view.rs
tests/: dependency_tests.rs  filter_tests.rs  integration_tests.rs  parser_tests.rs  planner_tests.rs  ui_tests.rs
