[package]
name = "par_tui"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
float_cmp = "deny"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
