[package]
name = "par_tui"
version = "0.2.0"
edition = "2024"
authors = ["ry2x"]
description = "Arch Linux system update wrapper with TUI for selective package exclusion"
repository = "https://github.com/ry2x/par_tui"
license = "MIT OR Apache-2.0"
keywords = ["arch-linux", "pacman", "paru", "tui", "updates"]
categories = ["command-line-utilities"]
readme = "README.md"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
float_cmp = "deny"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
