[package]
name = "par_tui"
version = "0.2.1"
edition = "2024"
authors = ["ry2x"]
description = "Arch Linux system update wrapper with TUI for selective package exclusion"
repository = "https://github.com/ry2x/par_tui"
license = "MIT OR Apache-2.0"
keywords = ["arch-linux", "pacman", "paru", "tui", "updates"]
categories = ["command-line-utilities"]
readme = "README.md"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
float_cmp = "deny"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
ratatui = { version = "0.30.0", default-features = false, features = [
    "crossterm",
] }
crossterm = { version = "0.29.0", default-features = false, features = [
    "event-stream",
] }
